<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_confirmar_datos"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.ss_baez.formulario.ConfirmarDatos">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_encabezado"
        android:textSize="@dimen/tv_encabezado"
        android:textStyle="bold"
        android:id="@+id/tv_confirmar"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textAlignment="center"
        android:textColor="@color/colorNegro"
        />

    <LinearLayout
        android:id="@+id/ll_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/lmT_ll_1"
        >

        <TextView
            android:id="@+id/tv_nombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_nombre"
            android:textColor="@color/colorNegro"
            android:textSize="@dimen/tS_nombre"
            />
        <TextView
            android:id="@+id/tv_nombreContacto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_nombreContacto"
            android:textSize="@dimen/tS_nombreContacto"
            android:textColor="@color/colorNegro"
            android:layout_marginLeft="@dimen/lmLS_nombreContacto"
            android:layout_marginStart="@dimen/lmLS_nombreContacto"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/ll_1"
        android:layout_marginTop="@dimen/lmT_ll_2"
        >
        <TextView
            android:id="@+id/tv_fechaContacto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_fechaContacto"
            android:textSize="@dimen/tS_fechaContacto"
            android:textColor="@color/colorNegro"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/ll_2"
        android:layout_marginTop="@dimen/lmT_ll_3"
        >
        <TextView
            android:id="@+id/tv_telefono"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_tel"
            android:textColor="@color/colorNegro"
            android:textSize="@dimen/tS_tel"
            />
        <TextView
            android:id="@+id/tv_telContacto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_telContacto"
            android:textSize="@dimen/tS_telContacto"
            android:textColor="@color/colorNegro"
            android:layout_marginLeft="@dimen/lmLS_telContacto"
            android:layout_marginStart="@dimen/lmLS_telContacto"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_3.1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/ll_3"
        android:layout_marginTop="@dimen/lmT_ll_3.1"
        >
        <TextView
            android:id="@+id/tv_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_email"
            android:textColor="@color/colorNegro"
            android:textSize="@dimen/tS_email"
            />
        <TextView
            android:id="@+id/tv_emailContacto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_emailContacto"
            android:textSize="@dimen/tS_email"
            android:textColor="@color/colorNegro"
            android:layout_marginLeft="@dimen/lmLS_emailContacto"
            android:layout_marginStart="@dimen/lmLS_emailContacto"
            />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/ll_4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/ll_3.1"
        android:layout_marginTop="@dimen/lmT_ll_4"
        >
        <TextView
            android:id="@+id/tv_descripcion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_descripcion2"
            android:textColor="@color/colorNegro"
            android:textSize="@dimen/tv_descripcion2"
            />
        <TextView
            android:id="@+id/tv_descripcionContacto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_descripcionContacto"
            android:textSize="@dimen/tv_descripcionContacto"
            android:textColor="@color/colorNegro"
            android:layout_marginLeft="@dimen/lmLS_descripcionContacto"
            android:layout_marginStart="@dimen/lmLS_descripcionContacto"
            />

    </LinearLayout>

    <Button
        android:id="@+id/btn_editar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/btn_editarDatos"
        android:theme="@style/MiBotonRaised"
        />


</RelativeLayout>
